Drivers/Auto-run Scripts issue on reload #48111

Closed
opened 2016-04-11 17:39:35 +02:00 by Luca Crisi · 45 comments

System Information
Windows 8.1 64 bit, nVidia GT740

Blender Version
Broken: 2.77a
Worked: 2.74

Short description of error
You make something act basing on a driver. All works perfectly.
Then you close the file, reopen it, and it tells you that the Auto-Run Scripts is not enabled.

Exact steps for others to reproduce the error
You make something act basing on a driver. All works perfectly.
Then you close the file, reopen it, and it tells you that the Auto-Run Scripts is not enabled.
Workaround: Open the preferences, disable and re-enable the Auto-Run Scripts option, save the prefs.
Note: you also have to move to the next frame and back, in order for the driver variable to update.

Error - 01.jpg

Error - 02.jpg

**System Information** Windows 8.1 64 bit, nVidia GT740 **Blender Version** Broken: 2.77a Worked: 2.74 **Short description of error** You make something act basing on a driver. All **works perfectly**. Then you close the file, reopen it, and it tells you that the Auto-Run Scripts is not enabled. **Exact steps for others to reproduce the error** You make something act basing on a driver. All **works perfectly**. Then you close the file, reopen it, and it tells you that the Auto-Run Scripts is not enabled. `Workaround`: Open the preferences, **disable and re-enable** the Auto-Run Scripts option, save the prefs. `Note`: you also have to move to the next frame and back, in order for the driver variable to update. ![Error - 01.jpg](https://archive.blender.org/developer/F302192/Error_-_01.jpg) ![Error - 02.jpg](https://archive.blender.org/developer/F302194/Error_-_02.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @BugFinder

Added subscriber: @BugFinder
Member

Added subscriber: @BrendonMurphy

Added subscriber: @BrendonMurphy
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Brendon Murphy self-assigned this 2016-04-12 08:34:29 +02:00
Member

hi,
In user Preferences you must set Auto Run Scripts to true if you want to automatically run your drivers, else you will get the message: "Auto Run Scripts disabled, Reload?" which gives you the opportunity to 'Reload' the file with drivers enabled.. This is not a bug, but by design to prevent unwanted data execution.
Closing as Invalid.

hi, In user Preferences you must set Auto Run Scripts to true if you want to automatically run your drivers, else you will get the message: "Auto Run Scripts disabled, Reload?" which gives you the opportunity to 'Reload' the file with drivers enabled.. This is not a bug, but by design to prevent unwanted data execution. Closing as Invalid.
Author

Obviously, Auto-run python scripts is always enabled in my preferences.

**Obviously**, Auto-run python scripts is **always enabled** in my preferences.
Author

Reopen my report, because the bug persists.

Reopen my report, because the bug persists.
Author

It's too easy to close bug reports without even trying to reproduce them!

It's too easy to close bug reports **without even trying** to reproduce them!
Author

You didn't even read my report.

I said You make something act basing on a driver. All works perfectly.
It wouldn't work, if Auto-run python scripts was disabled!!

You didn't even read my report. I said `You make something act basing on a driver. All works perfectly.` It **wouldn't work**, if Auto-run python scripts was disabled!!
Member

@BugFinder
Can you provide a small example .blend file to test? If so & the bug is reproducible. (provide steps needed to reproduce with your .blend) I'll re-open.

@BugFinder Can you provide a small example .blend file to test? If so & the bug is reproducible. (provide steps needed to reproduce with your .blend) I'll re-open.
Author

Sure, I will.
Thank you.

Sure, I will. Thank you.
Author

OK, here's an example file.
You'll notice IMMEDIATELY, on openin that there's an error.
Even if your preferences are set for Auto-running the scripts.

Tracks - Driver Error.blend

OK, here's an example file. You'll notice IMMEDIATELY, on openin that there's an error. Even if your preferences are set for Auto-running the scripts. [Tracks - Driver Error.blend](https://archive.blender.org/developer/F302494/Tracks_-_Driver_Error.blend)
Author

Some Screenshots can help,I guess?

01 - Load the File - An error appears.jpg

02 - Open the Preferences.jpg

03 - You can see that AutoRun is ENABLED.jpg

04 - Workaround STEP 01 - Disable that option.jpg

05 - Workaround STEP 02 - Re-enable that option and save the preference again.jpg

06 - Workaround STEP 03 - Move to the next frame.jpg

07 - Workaround STEP 04 - Move to the previous frame - Since now on, it works.jpg

Thank you

Some Screenshots can help,I guess? ![01 - Load the File - An error appears.jpg](https://archive.blender.org/developer/F302495/01_-_Load_the_File_-_An_error_appears.jpg) ![02 - Open the Preferences.jpg](https://archive.blender.org/developer/F302497/02_-_Open_the_Preferences.jpg) ![03 - You can see that AutoRun is ENABLED.jpg](https://archive.blender.org/developer/F302499/03_-_You_can_see_that_AutoRun_is_ENABLED.jpg) ![04 - Workaround STEP 01 - Disable that option.jpg](https://archive.blender.org/developer/F302501/04_-_Workaround_STEP_01_-_Disable_that_option.jpg) ![05 - Workaround STEP 02 - Re-enable that option and save the preference again.jpg](https://archive.blender.org/developer/F302503/05_-_Workaround_STEP_02_-_Re-enable_that_option_and_save_the_preference_again.jpg) ![06 - Workaround STEP 03 - Move to the next frame.jpg](https://archive.blender.org/developer/F302505/06_-_Workaround_STEP_03_-_Move_to_the_next_frame.jpg) ![07 - Workaround STEP 04 - Move to the previous frame - Since now on, it works.jpg](https://archive.blender.org/developer/F302507/07_-_Workaround_STEP_04_-_Move_to_the_previous_frame_-_Since_now_on__it_works.jpg) Thank you
Author

It seems I found a faster workaround to this problem:

  • Soon after loading the file, click "Reload trusted" and then confirm.

It seems to work well, as if you followed the 4 steps above.
But it's still a workaround.

It seems I found a faster **workaround** to this problem: * Soon after loading the file, click "Reload trusted" and then confirm. It seems to work well, as if you followed the 4 steps above. But it's still a workaround.
Author

So? Still not fixed?
Who will tell me this time that this is a feature?

So? Still not fixed? Who will tell me this time that this is a **feature**?
Member

Added subscriber: @JulienDuroure

Added subscriber: @JulienDuroure
Member

Can't reproduce.
At loading, I don't have "Reload trusted" option when Auto-run is on, and saved on my userprefs. Driver is working correctly.

Did you tried on another computer ?
Did you check on console if there is some error / warning message ? (at load, at userprefs saving)

Can't reproduce. At loading, I don't have "Reload trusted" option when Auto-run is on, and saved on my userprefs. Driver is working correctly. Did you tried on another computer ? Did you check on console if there is some error / warning message ? (at load, at userprefs saving)
Author

Yes I tried on 2 different computers.

By the way, I recently noticed that it also happens when I set #frame * 0.05 (well, the multiplier is NOT mandatory) on either a location or a rotation axis (or more).
This is because Blender implicitly creates a driver for that continuous rotation or translation.

Did you check on console ... No, I will investigate on that (fisrt of all I must discover how can I access that "Console").

Thank you for your suggestion.

Yes I tried on **2** different computers. By the way, I recently noticed that it also happens when I set `#frame * 0.05` (well, the multiplier is NOT mandatory) on either a location or a rotation axis (or more). This is because Blender implicitly creates a **driver** for that continuous rotation or translation. `Did you check on console ...` No, I will investigate on that (fisrt of all I must discover how can I access that "Console"). Thank you for your suggestion.
Author

OK, checked - NO ERRORS.
Only the DRAG of having to click RELOAD TRUSTED.

Console - NO ERRORS.jpg

OK, checked - NO ERRORS. Only the DRAG of having to click RELOAD TRUSTED. ![Console - NO ERRORS.jpg](https://archive.blender.org/developer/F307271/Console_-_NO_ERRORS.jpg)
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Can't reproduce either. I have the assumption that this is caused by the error prone filepath handling of windows. The code that checks if autorun is enabled works quite different for windows to allow case insensitive path comparisons. The changes made to the file browser that have been made since 2.74 might really well have caused such a regression.
Has anyone tried to reproduce on Win(8.1)?

@BugFinder, you can try to load the file from a filepath without any spaces and upper case letters.

Can't reproduce either. I have the assumption that this is caused by the error prone filepath handling of windows. The code that checks if autorun is enabled works quite different for windows to allow case insensitive path comparisons. The changes made to the file browser that have been made since 2.74 might really well have caused such a regression. Has anyone tried to reproduce on Win(8.1)? @BugFinder, you can try to load the file from a filepath without any spaces and upper case letters.
Author

... Windows can handle spaces and mixed case letters since at least 20 years... (Windows 95).
I always use both spaces and mixed case characters.
But I can try.

I just need a couple of hours to render a low-res and very noisy picture (yes I know Blender Render does it better and faster, but I've choosen Cycles since 1.5 years now and I only use that one - with all its limits).

In Blender 2.75 there was a HORRIBLE regression which introduced underscores in place of spaces - Which was really DISGUSTING.
But it has been fixed in Blender 2.75a.

I'll be back!

... Windows can handle spaces and mixed case letters since at least 20 years... (Windows 95). I always use both spaces and mixed case characters. But I can try. I just need a couple of hours to render a *low-res and very noisy* picture (yes I know Blender Render does it better and faster, but I've choosen Cycles since 1.5 years now and I only use that one - with all its limits). In Blender 2.75 there was a HORRIBLE regression which introduced underscores in place of spaces - Which was really DISGUSTING. But it has been fixed in Blender 2.75a. I'll be back!
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Member

hi, under correct usage you would do the following:

1/ enable auto run drivers
2/ Save User Settings in the User Preferences window
3/ restart blender

Following this convention you should have no more issues with drivers & be able to open blend files with drivers with no problems or pop ups.
Note: your last comment is unrelated & this is not the forum for yelling about things.

Closing as Invalid.

hi, under correct usage you would do the following: 1/ enable auto run drivers 2/ Save User Settings in the User Preferences window 3/ restart blender Following this convention you should have no more issues with drivers & be able to open blend files with drivers with no problems or pop ups. Note: your last comment is unrelated & this is not the forum for yelling about things. Closing as Invalid.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

Talked with @BrendonMurphy over IRC, really don't see a reason to close this yet. It's possible this is a real bug, but it can also be a user error. @BugFinder, would you mind updating your current userpref.blend again? Would help investigating.

Talked with @BrendonMurphy over IRC, really don't see a reason to close this yet. It's possible this is a real bug, but it can also be a user error. @BugFinder, would you mind updating your current userpref.blend again? Would help investigating.
Brendon Murphy removed their assignment 2016-05-17 22:43:49 +02:00
Julian Eisel was assigned by Brendon Murphy 2016-05-17 22:43:49 +02:00
Author

Well, this was really what I tried first: Verify that my Autorun scripts was enabled in the preferences.
I thought it was logic that Blender was complaining for a distraction by my side.

But It was already set.


I also tried renaming a test file with all small caps and underscores in place of spaces, but...
It didn't work either.

Sorry, @JulianEisel, it didn't help (luckily for me - or I should rethink all my work habits).

Well, this was really what I tried first: Verify that my Autorun scripts was enabled in the preferences. I thought it was logic that Blender was complaining for a distraction by my side. But It was already set. --- I also tried renaming a test file with all small caps and underscores in place of spaces, but... It didn't work either. Sorry, @JulianEisel, it didn't help (luckily for me - or I should rethink all my work habits).
Author

My userpref file, in case someone wants to analyze it.
Thank you for your efforts!

My userpref file, in case someone wants to analyze it. Thank you for your efforts!
Member

hi, you didn't upload the userpref file.

I have tested your test file in the original task on win 7 64 bit. I found no issue at all with it.
Once I had set Auto Run Scripts to be the default, there was no problem or warnings associated with your file & the running of drivers.

There's a difference between Ctrl/U Save Start Up File (creates file called startup.blend), this file handles screen layouts & default start objects.
& the Save User Settings Button in the User Preferences window (Creates file called userpref,blend), this file handles settings in user preferences including Auto Run Scripts & addons activation.

Your initial 'bug' by your description, strongly suggests you were saving Ctrl/U & not pressing the Save User Settings button.
Please upload your userpref.blend so we can test.
Thanks.

hi, you didn't upload the userpref file. I have tested your test file in the original task on win 7 64 bit. I found no issue at all with it. Once I had set Auto Run Scripts to be the default, there was no problem or warnings associated with your file & the running of drivers. There's a difference between Ctrl/U Save Start Up File (creates file called startup.blend), this file handles screen layouts & default start objects. & the Save User Settings Button in the User Preferences window (Creates file called userpref,blend), this file handles settings in user preferences including Auto Run Scripts & addons activation. Your initial 'bug' by your description, strongly suggests you were saving Ctrl/U & not pressing the Save User Settings button. Please upload your userpref.blend so we can test. Thanks.
Author

Here is my userpref.blend.
Hopefully it uploads this time?

Do you need my startup.blendstartup.blend as well?
I will upload it too.

Thank you

Here is my `userpref.blend`. Hopefully it uploads this time? Do you need my `startup.blend`[startup.blend](https://archive.blender.org/developer/F313445/startup.blend) as well? I will upload it too. Thank you
Author

Damn! It seems I can't upload userpref.blend!!
userpref.blend

Damn! It seems I can't upload `userpref.blend`!! [userpref.blend](https://archive.blender.org/developer/F313447/userpref.blend)
Author

Damn! It seems I can't upload userpref.blend!!
userpref.blend

Damn! It seems I can't upload `userpref.blend`!! [userpref.blend](https://archive.blender.org/developer/F313447/userpref.blend)
Member

@BugFinder, hi again, here's your fixed userprefs.blend
userpref.blend
here's a screenshot of what I believe causes the issue you had:
excluded paths.jpg
You can see here that the Excluded Paths button is activated but no path set. If you deactivate the empty excluded paths menu item (press the x button then save user settings) everything works as expected.

I'll refer this forward to devs as it may well be considered a bug.

Thanks for time to continue through & help us find result.

@BugFinder, hi again, here's your fixed userprefs.blend [userpref.blend](https://archive.blender.org/developer/F313484/userpref.blend) here's a screenshot of what I believe causes the issue you had: ![excluded paths.jpg](https://archive.blender.org/developer/F313486/excluded_paths.jpg) You can see here that the Excluded Paths button is activated but no path set. If you deactivate the empty excluded paths menu item (press the x button then save user settings) everything works as expected. I'll refer this forward to devs as it may well be considered a bug. Thanks for time to continue through & help us find result.
Author

FANTASTIC!
Thank you!

1 - I opened an empty scene, fixed the Preferences and saved.
2 - I opened a problematic file, and... the bug was GONE!!

Thank you, Thank you, Thank you!!


Now I have another problem ("double visualization" in editing).

Blender (Edit Mode) Double Visualization.jpg

I have a "double" representation of the edited object, instead of being a single solid thing.
This is confusing: The "fill" is smaller than the "wireframe", instead of being attached to it.

Shall I open another bug report?
Maybe it's a simple setting I'm just not aware of, but I can't even explain it in words...

FANTASTIC! Thank you! 1 - I opened an empty scene, fixed the Preferences and saved. 2 - I opened a problematic file, and... the bug was GONE!! Thank you, Thank you, Thank you!! --- Now I have another problem ("double visualization" in editing). ![Blender (Edit Mode) Double Visualization.jpg](https://archive.blender.org/developer/F313542/Blender__Edit_Mode__Double_Visualization.jpg) I have a "double" representation of the edited object, instead of being a single solid thing. This is confusing: The "fill" is smaller than the "wireframe", instead of being attached to it. Shall I open another bug report? Maybe it's a simple setting I'm just not aware of, but I can't even explain it in words...
Member

Hey, so this seems like a bug, but I can't recreate here. Guess it's a Win-only bug then.

Hey, so this seems like a bug, but I can't recreate here. Guess it's a Win-only bug then.
Julian Eisel removed their assignment 2016-05-20 18:00:17 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2016-06-01 16:03:40 +02:00

Please do not mix issues in reports, new problem requires a new report (this one totally looks like a graphic driver issue though, please first ensure you have latest one installed).

This one is considered solved (invalid actually, was mere lack of knowledge about how userpref saving works).

Please do not mix issues in reports, new problem requires a new report (this one totally looks like a graphic driver issue though, please first ensure you have latest one installed). This one is considered solved (invalid actually, was mere lack of knowledge about how userpref saving works).
Author

FANTASTIC!
Thank you!

1 - I opened an empty scene, fixed the Preferences and saved.
2 - I opened a problematic file, and... the bug was GONE!!

Thank you, Thank you, Thank you!!

FANTASTIC! Thank you! 1 - I opened an empty scene, fixed the Preferences and saved. 2 - I opened a problematic file, and... the bug was GONE!! Thank you, Thank you, Thank you!!
Author

To be considered SOLVED.

To be considered SOLVED.
Member

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Member

@mont29, if I got things correctly we still have a wrong behavior on Win here: Apparently, even if auto-run is enabled, enabling path excluding without setting a path simply excludes all files from auto-running. Works fine on Linux.

@mont29, if I got things correctly we still have a wrong behavior on Win here: Apparently, even if auto-run is enabled, enabling path excluding without setting a path simply excludes all files from auto-running. Works fine on Linux.

This issue was referenced by 8c154d67b2

This issue was referenced by 8c154d67b2c158722242b3ff14c7c814996c7351

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48111
No description provided.