source/blender/blenkernel/intern/autoexec.c
@@ -59,7 +59,10 @@ bool BKE_autoexec_match(const char *path)
 	BLI_assert((U.flag & USER_SCRIPT_AUTOEXEC_DISABLE) == 0);
 
 	for (path_cmp = U.autoexec_paths.first; path_cmp; path_cmp = path_cmp->next) {
-		if ((path_cmp->flag & USER_PATHCMP_GLOB)) {
+		if (path_cmp->path[0] == '\0') {
+			/* pass */
+		}
+		else if ((path_cmp->flag & USER_PATHCMP_GLOB)) {
 			if (fnmatch(path_cmp->path, path, fnmatch_flags) == 0) {
 				return true;
 			}
